app/assets/stylesheets/application.scss
@import "bootstrap";

/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
*/



/* Montserrat  => font-1 */
@font-face {
font-family: 'Montserrat';
src: url('Montserrat/Montserrat-Regular.ttf') format('truetype');
font-weight: 400;
font-style: normal;
}
@font-face {
font-family: 'Montserrat';
src: url('Montserrat/Montserrat-Thin.ttf') format('truetype');
font-weight: 100;
font-style: normal;
}
@font-face {
font-family: 'Montserrat';
src: url('Montserrat/Montserrat-Medium.ttf') format('truetype');
font-weight: 500;
font-style: normal;
}
@font-face {
font-family: 'Montserrat';
src: url('Montserrat/Montserrat-Bold.ttf') format('truetype');
font-weight: 700;
font-style: normal;
}
@font-face {
font-family: 'Montserrat';
src: url('Montserrat/Montserrat-Black.ttf') format('truetype');
font-weight: 900;
font-style: normal;
}

/* Asap font-2 */
@font-face {
font-family: 'Asap';
font-weight: 400;
font-style: normal;
src: url('Asap/Asap-Regular.ttf') format('truetype');
}
@font-face {
font-family: 'Asap';
font-weight: 500;
font-style: normal;
src: url('Asap/Asap-Medium.ttf') format('truetype');
}
@font-face {
font-family: 'Asap';
font-weight: 600;
src: url('Asap/Asap-MediumItalic.ttf') format('truetype');
}
@font-face {
font-family: 'Asap';
font-weight: 700;
font-style: normal;
src: url('Asap/Asap-Bold.ttf') format('truetype');
}

/* SportingGrotesque font-3 */
@font-face {
font-family: 'Sporting';
font-weight: 400;
font-style: normal;
src: url('SportingGrotesque/SportingGrotesque-Regular.otf') format('opentype');
}
@font-face {
font-family: 'Sporting';
font-weight: 700;
font-style: normal;
src: url('SportingGrotesque/SportingGrotesque-Bold.otf') format('opentype');
}

/* Metropolis  => font-4 */
@font-face {
font-family: 'Metropolis';
src: url('Metropolis/Metropolis-Regular.otf') format('opentype');
font-weight: 400;
font-style: normal;
}
@font-face {
font-family: 'Metropolis';
src: url('Metropolis/Metropolis-Thin.otf') format('opentype');
font-weight: 100;
font-style: normal;
}
@font-face {
font-family: 'Metropolis';
src: url('Metropolis/Metropolis-Medium.otf') format('opentype');
font-weight: 500;
font-style: normal;
}
@font-face {
font-family: 'Metropolis';
src: url('Metropolis/Metropolis-Bold.otf') format('opentype');
font-weight: 700;
font-style: normal;
}
@font-face {
font-family: 'Metropolis';
src: url('Metropolis/Metropolis-Black.otf') format('opentype');
font-weight: 900;
font-style: normal;
}


/* ---------------------------------------------------
    COLORS STYLE
----------------------------------------------------- */
// color main
$f-color-1: #ff815a;   //corail
$f-color-2: #6f4dff;   //electric-purple
$f-color-3: #2ff4b7;   //green-pepsi

.primary-color { color: $f-color-1 !important; }
.secondary-color { color: $f-color-2 !important; }
.third-color { color: $f-color-3 !important; }

// color shade/grey
$s-color-1: #e2e0df;
$s-color-2: #575757;
$s-color-3: #080416;

.light-color { background-color: $s-color-1; }
.medium-color{ background-color: $s-color-2; }
.strong-color { background-color: $s-color-3; }

// color for background
$m-color-1: #f1efeb;
$m-color-2: #bababa;

.primary-color-bg { background-color: $m-color-1;}
.secondary-color-bg { background-color: $m-color-2;}

/* ---------------------------------------------------
    FONTS STYLE
----------------------------------------------------- */
//LOGO font
$f-thin: 100;
$f-light: 300;
$f-regular: 400;
$f-medium: 500;
$f-medium-italic: 600;
$f-bold: 700;
$f-extra-bold: 800;
$f-black: 900;

$font-1: 'Montserrat';
$font-2: 'Asap';
$font-3: 'Sporting';
$font-4: 'Metropolis';

.f-thin {font-weight: $f-thin;}
.f-regular {font-weight: $f-regular;}
.f-medium {font-weight: $f-medium;}
.f-medium-italic {font-weight: $f-medium-italic;}
.f-bold {font-weight: $f-bold;}
.f-extra {font-weight: $f-extra-bold;}
.f-black {font-weight: $f-black;}

.font-1 {font-family: $font-1;}
.font-2 {font-family: $font-2;}
.font-3 {font-family: $font-3;}
.font-4 {font-family: $font-4;}







 /* ---------------------------------------------------
     SETUP NAVBAR AND FOOTER STICKY WITH FLEXBOX
 ----------------------------------------------------- */

 html,body {
 	height:100%;
  padding-top:70px;
  }
 body {
  display: flex;
  flex-direction: column;
}
.content {
  flex: 1 0 auto;
}
.footer {
  flex-shrink: 0;
  background-color: grey;
}

 .navbar {
   -webkit-transition:padding 0.2s ease;
   -moz-transition:padding 0.2s ease;
   -o-transition:padding 0.2s ease;
   transition:padding 0.2s ease;
 }

 .affix {
   // padding-top: 0.2em !important;
   // padding-bottom: 0.2em !important;
   -webkit-transition:padding 0.2s linear;
   -moz-transition:padding 0.2s linear;
   -o-transition:padding 0.2s linear;
   transition:padding 0.2s linear;
 }

.border-bottom-nav {
  border-bottom: 0.6px solid $m-color-2;
  z-index: 10000 !important;
}

 section {
     min-height:calc(100% - 70px);
}



/* ---------------------------------------------------
    LANDING PAGE (home#index)
----------------------------------------------------- */
// logo
.our-logo { width: 100px;}

// banners

div.container-fluid { padding: 0px; }
header.masthead {
  position: relative;
  background-color: #343a40;
  // background: url("../img/bg-masthead.jpg") no-repeat center center;
  background-size: cover;
  padding-top: 8rem;
  padding-bottom: 8rem;
}

header.masthead .overlay {
  position: absolute;
  background-color: #212529;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  // opacity: 0.3;
}

header.masthead h1 {
  font-size: 2rem;
}

@media (min-width: 768px) {
  header.masthead {
    padding-top: 12rem;
    padding-bottom: 12rem;
  }
  header.masthead h1 {
    font-size: 3rem;
  }
}


// form control landing-page
.form-landing-page {align-items: baseline;}



/* ---------------------------------------------------
    EVENT PAGE (events#index)
----------------------------------------------------- */

//cards style for sport events
div.sticky {
  position: -webkit-sticky;
  position: sticky;
  top: 7.07rem;
  background-color: #ffffff;
  padding: 10px;
  z-index: 9999 !important;
}
/* Category Ads */

#card-event {
    margin: 30px 0 30px 0;

}


#card-event .sport-notify-badge {
  position: absolute;
  right: 0px;
  top: 0px;
  /* background: #ff815a; */
  text-align: center;
  color: $f-color-1;
  font-size: 14px;
  width: 120px;
  height: 25px;
  padding: 0px 0px 0 0;
  border-bottom: $s-color-1 1px solid;
  border-left: 1px solid $s-color-1;
}


#card-event .card-detail-badge {
        background: #f2d900;
        text-align: center;
        border-radius: 30px 30px 30px 30px;
        color: #000;
        padding: 5px 10px;
        font-size: 14px;
    }



#card-event .card:hover {
            background: #fff;
            box-shadow: 12px 15px 20px 0px rgba(46,61,73,0.15);
            border-radius: 4px;
            transition: all 0.3s ease;
        }

#card-event .card-image-overlay {
        font-size: 20px;

    }


#card-event .card-image-overlay span {
            display: inline-block;
        }


#card-event .ad-btn {
        text-transform: uppercase;
        width: 150px;
        height: 40px;
        border-radius: 80px;
        font-size: 16px;
        line-height: 35px;
        text-align: center;
        border: 3px solid #e6de08;
        display: block;
        text-decoration: none;
        margin: 20px auto 1px auto;
        color: #000;
        overflow: hidden;
        position: relative;
        background-color: #e6de08;
    }

#card-event .ad-btn:hover {
            background-color: #e6de08;
            color: #1e1717;
            border: 2px solid #e6de08;
            background: transparent;
            transition: all 0.3s ease;
            box-shadow: 12px 15px 20px 0px rgba(46,61,73,0.15);
        }

#card-event .ad-title h5 {
        text-transform: uppercase;
        font-size: 18px;
    }

